use flex to solve overflow on small width device .collapsible-right is now align with .collapsible-title on iOS devices

--- a/public/css/lrr.css
+++ b/public/css/lrr.css
@@ -153,7 +153,7 @@ table thead .sorting_disabled a:after {
 }
 
 .index-carousel-container {
-  margin-top: -20px;
+  margin-top: -10px;
 }
 
 .carousel-prev {
@@ -320,17 +320,28 @@ p#nb {
 }
 
 .collapsible-right {
-  float: right;
   padding: 1.2rem 1.2rem 0 0;
 }
 
 .collapsible-body {
+  flex: 1 0 100%;
+  overflow: hidden;
+  box-sizing: border-box;
   border: none !important;
+}
+
+.option-flyout {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .option-flyout>.collapsible-title {
   font-size: 18px;
   font-weight: bold;
+  display: flex;
+  flex: 1 1 0;
+  overflow: hidden;
 }
 
 .option-flyout>.collapsible-body {
